tests/parsing/cmc/errors/122.expected
File "tests/parsing/cmc/errors/122.cmc", line 1, character 27-30:
1 | (define-system sys :local (Int))
                               ^^^
Error while parsing a system local variable declaration,
      read the symbol 'Int',
      but expected a sorted variable of the form "(var sort)", or a closing
      parenthesis.
